@@ -49,7 +49,8 @@ namespace Pandora_Modules {
 		TYPE_GENERIC_DATA_STRING, /**< The value is a string       */
 		TYPE_ASYNC_DATA, /**< Asynchronous generic_data */
 		TYPE_ASYNC_PROC, /**< Asynchronous generic_proc */
-		TYPE_ASYNC_STRING /**< Asynchronous generic_data_string */
+		TYPE_ASYNC_STRING, /**< Asynchronous generic_data_string */
+		TYPE_LOG /**< Log data */
 	} Module_Type;
 
 	const string module_generic_data_str        = "generic_data";
@@ -59,6 +60,7 @@ namespace Pandora_Modules {
 	const string module_async_data_str          = "async_data";
 	const string module_async_proc_str          = "async_proc";
 	const string module_async_string_str        = "async_string";
+	const string module_log_str                 = "log";
 
 	/**
 	 * Defines the kind of the module.
